# lizardscript

./: .gitignore  LICENSE  LizardScript.sln  README.md  lsmanual.md
LizardScript/: ByteCodeGenerator.cpp  ByteCodeGenerator.h  CMakeLists.txt  CMakeSettings.json  DefaultSyntaxCore.h  Delegate.h  Exception.h  Expr.cpp  Expr.h  FastRemoveVector.h  FindFunctionToCall.cpp  FindType.h  IByteCodeGenerator.cpp  IByteCodeGenerator.h  ILexer.cpp  ILexer.h  IParser.cpp  IParser.h  IdentifiersProcessor.h  Jumps.h  Keyword.h  Lexer.cpp  Lexer.h  LizardScript.sln  LizardScript.vcxproj  LizardScript.vcxproj.filters  LizardScriptCompiler.cpp  LizardScriptCompiler.h  LizardScriptLibrary.cpp  LizardScriptLibrary.h  Logger.cpp  Logger.h  LsExpr.cpp  LsExpr.h  LsOpcode.h  Makefile  NewLocalVariable.cpp  NonTypedStack.h  Operators.h  Parser.cpp  (+31 more)
LizardScript/CMake/: DefaultCXX.cmake
LizardScript/LizardScript/: CMakeLists.txt  LizardScript.cpp  LizardScript.vcxproj  LizardScript.vcxproj.filters  LsCppSettingsExample(Mac).txt  LsCppSettings_example.txt  Resource.rc  lstest.ls  print_float_0_1.lsa  resource.h  spin_benchmark.lsa  spin_benchmark64.lsa  test.lsa  test.lsc  test_string.lsa
LizardScript/LizardScriptCore/: CMakeLists.txt  ConsoleColor.h  Delegate.h  Exception.h  FastRemoving.h  Lexer.cpp  Lexer.h  LizardScript.h  LizardScriptCore.vcxproj  LizardScriptCore.vcxproj.filters  LizardScriptDefault.cpp  LizardScriptDefault.h  Logger.cpp  Logger.h  LsAsm.cpp  LsAsm.h  LsCompiler.cpp  LsCompiler.h  LsCpp.cpp  LsCpp.h  LsCppExternal.h  LsDisasm.cpp  LsDisasm.h  LsFunction.h  LsTypedefs.h  Lsl.h  Makefile  NonTypedStack.h  NonTypedStack2.h  OpcodesText.h  Parser.cpp  Parser.h  Pools.h  Print.cpp  Print.h  Runtime.cpp  Runtime.h  RuntimeCases.h  RuntimeCases.i  RuntimeMacros.h  (+22 more)
LizardScript/from_sstp/: Exception.h  VectorsTuple.h  algorithms.h  stringptr.h
LizardScriptInteractive/: LizardScriptInteractive.cpp  LizardScriptInteractive.vcxproj  LizardScriptInteractive.vcxproj.filters  nasm.lib  pch.h  sstp.ls  test.ls
LizardScriptTests/: LizardScriptTests.vcxproj  LizardScriptTests.vcxproj.filters  stdafx.cpp  stdafx.h  unittest1.cpp
LsLightspeed/: Lightspeed.cpp  Lightspeed.h  LsLightspeed.cpp  LsLightspeed.h  LsLightspeed.vcxproj  LsLightspeed.vcxproj.filters  build_dcode.bat  dcode  dcode.asm  nasm_as_lib_import.h  pch.h
